Developed most of trending, still need headers and some images. Added back arrow to reader

--- a/reader.html
+++ b/reader.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <header>
-            <img src=""
+            <a href="trending.html">
+                <img width = "50px" src="back arrow.png">
+            </a>
             <h1>Frogs</h1>
         </header>
         <main>
