Removed superfluous copyright symbol from signup/login

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h1>Miradoc<sup>&reg;</sup></h1>
         </header>
         <main>
-            <h2>Welcome to Miradoc!<sup>&reg;</sup></h2>
+            <h2>Welcome to Miradoc!</h2>
             <form method="get" action="trending.html">
                 <div>
                     <span>Username: </span>
