Fixed back-arrow name, removing space. Also changed like to liked icon where appropriate

--- a/mydocs.html
+++ b/mydocs.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <a href="trending.html">
-                <img width = "50px" src="back arrow.png">
+                <img width = "50px" src="back-arrow.png">
             </a>
             <h1>My Documents</h1>
             <a href="writer.html">Begin new document</a>
