--- a/trending.html
+++ b/trending.html
@@ -36,7 +36,7 @@
                 <a href="reader.html">
                     <img src="document-icon.png" width="100px">
                 </a>
-                <img src="like-icon.png" width="50px">
+                <img src="liked-icon.png" width="50px">
                 <span>Likes: 927</span>
                 <br />
                 <a href="reader.html">Concerning Chickens</a>
