--- a/reader.html
+++ b/reader.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <a href="trending.html">
-                <img width = "50px" src="back arrow.png">
+                <img width = "50px" src="back-arrow.png">
             </a>
             <h1>Frogs</h1>
         </header>
