Modified text of signup/login to differentiate between them more easily

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     </head>
     <body>
         <header>
-            <h1>Miradoc<sup>&reg;</sup></h1>
+            <h1>Miradoc</h1>
         </header>
         <main>
-            <h2>Welcome to Miradoc!</h2>
+            <h2>Welcome Back! Login Below:</h2>
             <form method="get" action="trending.html">
                 <div>
                     <span>Username: </span>
