Added title to Document Reader, updated mydocs to suggest the docs were made by the user

--- a/reader.html
+++ b/reader.html
@@ -8,9 +8,10 @@
             <a href="trending.html">
                 <img width = "50px" src="back-arrow.png">
             </a>
-            <h1>Frogs</h1>
+            <h2>Document Reader</h2>
         </header>
         <main>
+            <h3>Frogs</h3>
             <p>Frogs are really nice, I like frogs. Some people say they're slimy,
                 but that doesn't bother me at all. They're better listeners than people,
                 and they swim better too!
